feat: update old and add new APIs
